fixed case study title spacing and api catalog tile title spacing for mobile

--- a/assets/css/api-catalog.css
+++ b/assets/css/api-catalog.css
@@ -98,6 +98,7 @@
 
 .case-two__content * {
    margin-left: 30px;
+   padding-right: 30px;
 }
 
 .case-two__image {
